# DataVentsOpenExampleApp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
backend/: .env.example  .gitignore  Makefile  README.md  SDK.md  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/src/api/: flask_app.py
frontend/: README.md  next.config.ts  package.json
frontend/docs/: CONFIG.md  USAGE.md
frontend/src/app/: AppShell.tsx  globals.css  layout.tsx
frontend/src/app/lib/: config.ts
frontend/src/app/search/: EventCard.tsx  page.tsx
frontend/src/app/types/: normalized.ts
frontend/src/app/ui/: DvWsPanel.tsx  GraphModal.tsx  HistoryDock.tsx  HistoryStore.tsx  Nav.tsx  OrderBookView.tsx  PriceChart.tsx  UIVisibility.tsx
frontend/src/app/ui/orderbook/: parse.ts
