[project]
name = "datavents-open-example-app"
version = "0.1.0"
description = "DataVentsOpenExampleApp backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black==24.4.2",
    "cryptography>=46.0.3",
    "eth-account===0.13.0",
    "eth-utils===4.1.1",
    "overrides>=7.7.0",
    "poly-eip712-structs==0.0.1",
    "py-builder-signing-sdk==0.0.2",
    "py-order-utils==0.3.2",
    "pytest>=8.2.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "pydantic>=2.6.0",
    "httpx>=0.28.1",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-sock>=0.7.0",
    "websockets>=12",
    "certifi>=2024.2.2",
    "simple-websocket>=1.0.0",
]
